worked on css for <p> spacing on gif ratings but still not fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,22 @@ body {
     margin-top: 1.5em;
 }
 
-p {
-    color: #ff8a00;
+img {
+    /*height: 10em;
+    width: 10em;*/
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
 }
+    
+
+p {
+    position: relative;
+    background-color: black;
+    color: white;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    padding-top: 1.5em;
+    z-index: 3;
+  }
+
 
